# cpp_craft_1013

solutions/andrei_perapiolkin/Week_1/: .~lock.cpp_craft_lec_1_part_2_v1_2.pptx#  .~lock.puzzles.doc#
solutions/andrei_perapiolkin/Week_1/code_examples/001_cmake_example/: .cproject  .project  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
solutions/andrei_perapiolkin/Week_1/code_examples/001_cmake_example/bin_64/Debug/: read_file
solutions/andrei_perapiolkin/Week_1/code_examples/001_cmake_example/sources/: CTestTestfile.cmake  Makefile  cmake_install.cmake
solutions/andrei_perapiolkin/Week_1/code_examples/001_cmake_example/sources/functions/: CTestTestfile.cmake  Makefile  cmake_install.cmake
solutions/andrei_perapiolkin/Week_1/code_examples/001_cmake_example/sources/hello_world/: CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
solutions/andrei_perapiolkin/Week_1/code_examples/001_cmake_example/sources/pointers/: CTestTestfile.cmake  Makefile  cmake_install.cmake
solutions/andrei_perapiolkin/Week_1/code_examples/001_cmake_example/sources/read_file/: CTestTestfile.cmake  Makefile  cmake_install.cmake
solutions/andrei_perapiolkin/Week_1/code_examples/001_cmake_example/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
solutions/andrei_perapiolkin/Week_1/src/: CMakeLists.txt  Makefile
solutions/andrei_perapiolkin/Week_1/src/InvertedStrings/: .cproject  .project  InvertedStrings  Makefile  main.cpp  main.cpp~
solutions/andrei_perapiolkin/Week_1/src/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  hello
(+3 files in other folders)
